# program_library_study

./: README.md
Linux/: LinuxProgramLibrary.ppt  ProgramLibrary.md  ProgramLibrary.xmind  Program　Library.xmind
Linux/00_basics/: basics.md
Linux/00_basics/src/: hello  hello.c  hello.i  hello.s
Linux/00_build_phase/: build
Linux/00_build_phase/src/: add.c  add.i  add.s  main.c  main.i  sub.c  sub.h  sub.i  sub.s  test
Linux/01/: build  ztest.c
Linux/01_static_library/: static.md
Linux/01_static_library/01_link_object/: add.h  build  test  test.c
Linux/01_static_library/02_archive/: build
Linux/01_static_library/03_create_static_library/: build
Linux/01_static_library/04_use_static_library/: build  ztest.c
Linux/02/: build  zmath.h  ztest
Linux/02_shared_library/01_simple/: buildso  sub.c  zmath.h
Linux/02_shared_library/01_simple/test/: build  run  ztest  ztest.c
Linux/02_shared_library/02_rpath/: build
Linux/02_shared_library/03_version/1.0/: build  install
Linux/02_shared_library/03_version/2.0/: build  divide.c  install  libzmath.so.2.0.0
Linux/02_shared_library/03_version/test1/: ztest1  ztest1.c
Linux/02_shared_library/03_version/test2/: ztest2.c
Linux/02_shared_library/04_preload/: build  override.c  run  ztest2
Linux/02_shared_library/src/: README.md
Linux/02_shared_library/src/1.1/: build  div.c  mul.c  zmath.h
Linux/02_shared_library/src/2.0/: add.c  build  multiple.c  zmath.h
Linux/03_dynamically_loaded/: build  dlzmath.c
Linux/04_cpp/: build  zmath.h  ztest.cpp
Linux/cmake/: CMakeLists.txt
Linux/cmake/src/: subtract.c  ztest.c
Linux/dynamically_loaded/: DL.md  dl_full  dl_full.c  dlexec  dlexec.c  dlobj  dlobj.c  dltest  dltest.c  dlzmath  dlzmath.c  hello  hello.c
Linux/link_method/: .build.swp  build  hello.cpp  hello_full_dynamic  hello_full_static  hello_half_static
Linux/shared/: libzmath.so.1.0.0  shared.md  sub.c  zmath.h
Linux/shared/custom_directory/: build  ztest.c
Linux/shared/rpath/: add.c  build  rtest
Linux/shared/test/: build  ztest
Linux/src/: divide.c  multiply.c
Linux/static/: static.md
Linux/static/test/: ztest
build-link/: build  hello  hello.c  hello.i  hello.s
